Fixing stretched images in carousel

--- a/_sass/3-layout/carousel.scss
+++ b/_sass/3-layout/carousel.scss
@@ -16,5 +16,6 @@
     border: 1px solid white;
     max-height: 500px;
     width: 50%;
-    display: block;
-}
+    object-fit: contain;
+    height: auto;
+  }
